--- a/css/main.css
+++ b/css/main.css
@@ -4,13 +4,16 @@ h1 {
     font-family: 'Silkscreen', sans-serif;
 }
 
+word {
+    display: inline-block;
+}
+
 #word > * {
-    background-color: black;
-    border-bottom: 5px solid black;
-    width: 50px;
-    height: 50px;
+    border-bottom: .5rem solid black;
+    width: 5rem;
+    height: 5rem;
 }
 
 button {
-    background-color: pink;
+    border-radius: 2rem;
 }
