correct guesses are displayed and displaying the wrong guesses

--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,11 @@ h1 {
     font-family: 'Open Sans', sans-serif;
     font-family: 'Silkscreen', sans-serif;
 }
+
+#wrongletters {
+    font-size: 40px;
+}
+
 #word {
     display: flex;
     align-items: center;
