switches all key imputs to lowercase

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-h1 {
+h1, h2 {
     font-family: 'Lobster', sans-serif;
     font-family: 'Open Sans', sans-serif;
     font-family: 'Silkscreen', sans-serif;
