--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 main {
-    margin: auto;
+    text-align: center;
 }
 h1, h2 {
     font-family: 'Lobster', sans-serif;
@@ -14,6 +14,7 @@ h1, h2 {
 #word {
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 #word > * {
